RESOLVED FIXED182550
REGRESSION: WebGL no longer producing a transparent canvas on iOS
https://bugs.webkit.org/show_bug.cgi?id=182550
Summary REGRESSION: WebGL no longer producing a transparent canvas on iOS
Dean Jackson
Reported 2018-02-06 14:05:52 PST
REGRESSION: WebGL no longer producing a transparent canvas on iOS
Attachments
Patch (2.66 KB, patch)
2018-02-06 14:10 PST, Dean Jackson
eric.carlson: review+
Dean Jackson
Comment 1 2018-02-06 14:06:27 PST
Dean Jackson
Comment 2 2018-02-06 14:10:59 PST
Dean Jackson
Comment 3 2018-02-06 14:25:34 PST
Dean Jackson
Comment 4 2018-03-07 11:05:36 PST
*** Bug 182379 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.